# Hcpcs2Vec

./: .flake8  .gitignore  medicare.py  models.py  pyproject.toml  readme.md  requirements.txt  utils.py
cbow/: errors.cbow-150-w5.412837.txt  errors.cbow-75-w5.412838.txt  main.py  main.slurm  output.cbow-150-w10.232248.txt  output.cbow-150-w5.232249.txt  output.cbow-150-w5.412837.txt  output.cbow-300-w10.232253.txt  output.cbow-300-w5.232252.txt  output.cbow-75-w10.232251.txt  output.cbow-75-w5.232250.txt  output.cbow-75-w5.412838.txt
cbow/logs/: train-loss-e150-w10-i200-t083120050206.csv  train-loss-e150-w5-i200-t080420062626.csv  train-loss-e150-w5-i200-t083120050241.csv  train-loss-e300-w10-i200-t083120050501.csv  train-loss-e300-w5-i200-t080420062114.csv  train-loss-e300-w5-i200-t083120050401.csv  train-loss-e75-w10-i200-t083120050322.csv  (+9 more)
choi-embeddings/: choi-embedding-preprocessing.ipynb
embeddings/: cbow-e75-w10-i200-t083120050322.kv  cbow-e75-w5-i200-t083120050251.kv  dmepos-hcpcs2vec-e75-w100-i100.kv  skipgram-e75-w10-i100-t031321155120.kv  skipgram-e75-w10-i100-t083020145358.kv  skipgram-e75-w5-i100-t030821210729.kv  skipgram-e75-w5-i100-t083020201858.kv
generate-skipgrams/: generate-skipgrams.py  main.py  main.slurm
gensim/: corpus.py  corpus.slurm
gpu/: cpu_timings.csv  errors.216880.txt  errors.216881.txt  main.slurm  mnist_gpu.py  output.216880.txt  output.216881.txt
model-cbow/: main.py  main.slurm
model-skipgram/: main.py  main.slurm
nearest-neighbors/: Untitled.ipynb
notebooks/: Untitled.ipynb  embedding-analysis.ipynb  load-hcpcs.ipynb  skip-gram-demo.ipynb  training-loss.ipynb
random-embeddings/: Untitled.ipynb  random-embeddings.ipynb
skipgram/: Untitled.ipynb  errors.216890.txt  errors.216891.txt  errors.221568.txt  errors.221577.txt  errors.sg-e150-w5.403962.txt  errors.train-sg-300.221666.txt  generate-skipgrams.py  generate-skipgrams.slurm  main.gpu.slurm  main.py  main.slurm  output.216891.txt  output.sg-e75-w10.421334.txt  output.sg-e75-w10.442188.txt  skipgram.py  train-skipgram.py  train-skipgram.slurm  training-07-21-20-22-19-42.csv  training-07-22-20-20-13-43.csv
src/: medicare.py  models.py  preprocess-medicare.py  skipgram.py  utils.py
train/: errors-sg-20.221649.txt  main.py  main.slurm  main_gpu.slurm  output-sg-20.221649.txt  output-sg-5.221646.txt  train-skipgram.slurm  training-07-26-20-17-23-39.csv
utils/: Untitled1.ipynb  callbacks.py  data.py  utils.py
(+36 files in other folders)
