[tool.poetry]
name = "drug2vec"
version = "0.1.0"
description = "A project for computing semantic embeddings for drug names."
authors = ["johnsonj561 <johnsonj561@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
absl-py = "0.9.0"
appnope = "0.1.0"
astunparse = "1.6.3"
autopep8 = "1.5.3"
backcall = "0.2.0"
boto = "2.49.0"
boto3 = "1.14.28"
botocore = "1.17.28"
cachetools = "4.1.1"
certifi = "2020.6.20"
chardet = "3.0.4"
decorator = "4.4.2"
docutils = "0.15.2"
gast = "0.3.3"
gensim = "3.8.3"
google-auth = "1.19.2"
google-auth-oauthlib = "0.4.1"
google-pasta = "0.2.0"
grpcio = "1.30.0"
h5py = "2.10.0"
idna = "2.10"
importlib-metadata = "1.7.0"
ipython = "7.16.1"
ipython_genutils = "0.2.0"
jedi = "0.17.2"
jmespath = "0.10.0"
joblib = "0.16.0"
Keras-Preprocessing = "1.1.2"
Markdown = "3.2.2"
numpy = "1.19.0"
oauthlib = "3.1.0"
opt-einsum = "3.2.1"
pandas = "1.0.5"
parso = "0.7.0"
pexpect = "4.8.0"
pickleshare = "0.7.5"
prompt-toolkit = "3.0.5"
protobuf = "3.12.2"
ptyprocess = "0.6.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycodestyle = "2.6.0"
Pygments = "2.6.1"
python-dateutil = "2.8.1"
pytz = "2020.1"
pyzmq = "19.0.1"
requests = "2.24.0"
requests-oauthlib = "1.3.0"
rsa = "4.6"
s3transfer = "0.3.3"
scikit-learn = "0.23.1"
scipy = "1.4.1"
six = "1.15.0"
sklearn = "0.0"
smart-open = "2.1.0"
tensorboard = "2.2.2"
tensorboard-plugin-wit = "1.7.0"
tensorflow-estimator = "2.2.0"
termcolor = "1.1.0"
threadpoolctl = "2.1.0"
toml = "0.10.1"
traitlets = "4.3.3"
urllib3 = "1.25.9"
wcwidth = "0.2.5"
Werkzeug = "1.0.1"
wrapt = "1.12.1"
zipp = "3.1.0"


[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
isort = "^5.7.0"
flake8-isort = "^4.0.0"
taskipy = "^1.6.0"
pre-commit = "^2.11.1"
ipykernel = "^5.5.0"
jupyterlab = "^3.0.10"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 100

[tool.black]
include = 'src'
exclude = '''
(
  src/main\.sh
  | src/\.ipynb_checkpoints
  | src/.*\.csv
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.taskipy.tasks]
format = "black . && isort ."
notebook = "poetry shell; jupyter lab;"